--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'com.tngtech.archunit:archunit:0.10.2'
     testCompile 'org.assertj:assertj-core:3.13.2'
+    testCompile 'org.mockito:mockito-core:2.+'
 }
