Adds a licence agreement on gradle configuration

--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,8 @@ dependencies {
 }
 
 apply plugin: 'com.gradle.build-scan'
+
+buildScan {
+    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+    termsOfServiceAgree = 'yes'
+}
